<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.hue.husc.it.nhuquynh.quanlynv.MainActivity">


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tendangnhap"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:id="@+id/viewDangNhap" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hinttendangnhap"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:layout_margin="20dp"
        android:id="@+id/editTenDangNhap" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nhapmatkhau"
        android:inputType="textPassword"
        android:text="Name"
        android:layout_margin="20dp"
        android:ems="10"
        android:id="@+id/editMatKhau" />

    <CheckBox
        android:id="@+id/saveLoginCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextPassword"
        android:text="Save Login?"
        android:textColor="#000" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:onClick="DangNhap"
            android:text="@string/dongy"
            android:id="@+id/button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thoat"
            android:id="@+id/button2"
            android:onClick="exitAction"

            android:layout_gravity="center" />


    </LinearLayout>


</LinearLayout>
